[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/enemy_.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 28.705, 30.261 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 460.686

[node name="enemy_" type="KinematicBody2D" groups=[
"enemy",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0, 0, 1 )
rotation = -1.5708
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Position2D" type="Position2D" parent="Sprite" index="0"]

position = Vector2( -1.78837e-06, 40.9131 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 5.99216, 26.2672 )
scale = Vector2( 0.728705, 0.728705 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Timer2" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]


